fix: page auto and system dark mode

--- a/docs/.sphinx/_static/swagger-override.css
+++ b/docs/.sphinx/_static/swagger-override.css
@@ -100,4 +100,16 @@
             filter: invert(100%) hue-rotate(180deg);
         }
     }
+
+    @media (prefers-color-scheme: dark) {
+        body[data-theme="auto"] {
+            .swagger-ui {
+                filter: invert(88%) hue-rotate(180deg);
+            }
+
+            .swagger-ui .microlight {
+                filter: invert(100%) hue-rotate(180deg);
+            }
+        }   
+    }
 }
